--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -216,14 +216,15 @@
         android:textColor="#ffffff"
         android:layout_centerHorizontal="true"
         android:textSize="20sp"/>
-    <Button
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/language_btn"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:text="n"
-        android:visibility="gone"/>
-
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        android:text=""
+        android:textColor="#ffffff"
+        android:id="@+id/appVersion"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"/>
 
 </RelativeLayout>
