--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,230 +1,229 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ /**
   ~  * Created by Assaf Biton
   ~  */
   -->
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingStart="@dimen/activity_horizontal_margin"
-    android:paddingEnd="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@drawable/main_backgroud"
-    tools:context="com.assafbt.projects.memorygame.MainActivity"
-    android:orientation="vertical">
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/MainTitleAll"
-        android:orientation="vertical"
-        android:background="#D32C721C"
-        android:layout_marginTop="50dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:paddingHorizontal="15dp"
-        android:paddingVertical="10dp">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/main_title1"
-        android:id="@+id/MainTitle1"
-        android:layout_gravity="center_horizontal"
-        android:textSize="20sp"
-        android:textColor="#ffffff"
-        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/main_title2"
-        android:id="@+id/MainTitle2"
-        android:textSize="20sp"
-        android:layout_gravity="center_horizontal"
-        android:textColor="#ffffff"
-        android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large" />
-    </LinearLayout>
-    <!-- Score Board-->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/ScoreBoard"
-        android:layout_below="@+id/resetLL"
-        android:layout_alignEnd="@+id/resetLL"
-        android:orientation="vertical"
-        android:background="@drawable/scoreboard2"
-        android:paddingTop="15dp"
-        android:paddingBottom="25dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/score_board"
-            android:id="@+id/tv_board"
-            android:textStyle="bold"
-            android:textColor="#ffffff"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:layout_gravity="center" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center">
-            <!-- Line #1 -->
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:text="@string/score1"
-                android:textColor="#ffffff"
-                android:id="@+id/best1Title" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:text="@string/score_zero"
-                android:layout_marginStart="30dp"
-                android:textColor="#ffffff"
-                android:id="@+id/best1View" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center">
-            <!-- Line #2 -->
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:text="@string/score2"
-                android:id="@+id/best2Title"
-                android:textColor="#ffffff" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:text="@string/score_zero"
-                android:layout_marginStart="30dp"
-                android:id="@+id/best2View"
-                android:textColor="#ffffff" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center">
-            <!-- Line #3 -->
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:text="@string/score3"
-                android:textColor="#ffffff"
-                android:id="@+id/best3Title" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:text="@string/score_zero"
-                android:textColor="#ffffff"
-                android:layout_marginStart="30dp"
-                android:id="@+id/best3View" />
-        </LinearLayout>
-    </LinearLayout>
-    <!--
-        </FrameLayout>
-    -->
-
-
+    android:orientation="vertical"
+    tools:context="com.assafbt.projects.memorygame.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:id="@+id/resetLL"
-        android:layout_below="@+id/selectBTN">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <Button
-            android:id="@+id/resetIMG"
-            android:text="@string/reset_imgs"
+        <LinearLayout
+            android:id="@+id/MainTitleAll"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/purple_button"
-            android:textColor="#ffffff"
-            android:textSize="20sp"
-            android:layout_weight="1"
-            android:textAlignment="center"/>
+            android:layout_gravity="center"
+            android:layout_marginTop="50dp"
+            android:background="#D32C721C"
+            android:orientation="vertical"
+            android:paddingHorizontal="15dp"
+            android:paddingVertical="10dp">
+
+            <TextView
+                android:id="@+id/MainTitle1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/main_title1"
+                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
+                android:textColor="#ffffff"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/MainTitle2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/main_title2"
+                android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
+                android:textColor="#ffffff"
+                android:textSize="20sp" />
+        </LinearLayout>
 
         <Button
+            android:id="@+id/startBTN"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/reset_score"
-            android:id="@+id/resetBTN"
+            android:layout_gravity="center"
             android:background="@drawable/purple_button"
+            android:text="@string/play_game"
             android:textColor="#ffffff"
-            android:textSize="20sp"
-            android:layout_weight="1"
-            android:textAlignment="center"/>
-    </LinearLayout>
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/select_imgs"
-        android:id="@+id/selectBTN"
-        android:layout_below="@+id/startBTN"
-        android:layout_marginBottom="13dp"
-        android:background="@drawable/purple_button"
-        android:textColor="#ffffff"
-        android:layout_centerHorizontal="true"
-        android:textSize="20sp" />
+            android:textSize="20sp" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/play_game"
-        android:id="@+id/startBTN"
-        android:layout_below="@+id/MainTitleAll"
-        android:background="@drawable/purple_button"
-        android:textColor="#ffffff"
-        android:layout_centerHorizontal="true"
-        android:textSize="20sp"/>
+        <Button
+            android:id="@+id/selectBTN"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="13dp"
+            android:background="@drawable/purple_button"
+            android:text="@string/select_imgs"
+            android:textColor="#ffffff"
+            android:textSize="20sp" />
 
-    <ImageView
-        android:layout_width="90dp"
-        android:layout_height="45dp"
-        android:src="@drawable/my_logo_12"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:id="@+id/iv_logo" />
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/infoBtn"
-        android:text="@string/about_text"
-        android:layout_above="@+id/iv_logo"
-        android:background="@drawable/green_button1"
-        android:textColor="#ffffff"
-        android:layout_centerHorizontal="true"
-        android:textSize="20sp"/>
+        <LinearLayout
+            android:id="@+id/resetLL"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="@style/TextAppearance.AppCompat.Small"
-        android:text=""
-        android:textColor="#ffffff"
-        android:id="@+id/appVersion"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"/>
+            <Button
+                android:id="@+id/resetIMG"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/purple_button"
+                android:text="@string/reset_imgs"
+                android:textAlignment="center"
+                android:textColor="#ffffff"
+                android:textSize="20sp" />
 
-</RelativeLayout>
+            <Button
+                android:id="@+id/resetBTN"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/purple_button"
+                android:text="@string/reset_score"
+                android:textAlignment="center"
+                android:textColor="#ffffff"
+                android:textSize="20sp" />
+        </LinearLayout>
+
+        <!-- Score Board-->
+        <LinearLayout
+            android:id="@+id/ScoreBoard"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/resetLL"
+            android:layout_alignEnd="@+id/resetLL"
+            android:background="@drawable/scoreboard2"
+            android:orientation="vertical"
+            android:paddingTop="15dp"
+            android:paddingBottom="25dp">
+
+            <TextView
+                android:id="@+id/tv_board"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/score_board"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:textColor="#ffffff"
+                android:textStyle="bold" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="horizontal">
+                <!-- Line #1 -->
+                <TextView
+                    android:id="@+id/best1Title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/score1"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                    android:textColor="#ffffff" />
+
+                <TextView
+                    android:id="@+id/best1View"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="30dp"
+                    android:text="@string/score_zero"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                    android:textColor="#ffffff" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="horizontal">
+                <!-- Line #2 -->
+                <TextView
+                    android:id="@+id/best2Title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/score2"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                    android:textColor="#ffffff" />
+
+                <TextView
+                    android:id="@+id/best2View"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="30dp"
+                    android:text="@string/score_zero"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                    android:textColor="#ffffff" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="horizontal">
+                <!-- Line #3 -->
+                <TextView
+                    android:id="@+id/best3Title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/score3"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                    android:textColor="#ffffff" />
+
+                <TextView
+                    android:id="@+id/best3View"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="30dp"
+                    android:text="@string/score_zero"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                    android:textColor="#ffffff" />
+            </LinearLayout>
+        </LinearLayout>
+        <!--
+            </FrameLayout>
+        -->
+
+        <Button
+            android:id="@+id/infoBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@drawable/green_button1"
+            android:text="@string/about_text"
+            android:textColor="#ffffff"
+            android:textSize="20sp" />
+
+
+            <TextView
+                android:id="@+id/appVersion"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                android:textColor="#ffffff"
+                android:layout_gravity="center"
+                android:background="#EB5C5C5C"
+                android:layout_marginTop="40dp"/>
+
+            <ImageView
+                android:id="@+id/iv_logo"
+                android:layout_width="90dp"
+                android:layout_height="45dp"
+                android:layout_gravity="center"
+                android:src="@drawable/my_logo_12" />
+        </LinearLayout>
+</ScrollView>
